# InvertedIndex

./: CMakeLists.txt
include/: FileSystem.h  InvertedIndex.h  Matcher.h
src/: FileSystem.cpp  InvertedIndex.cpp  Matcher.cpp
tests/: CMakeLists.txt  test_fs.cpp  test_fs_find.cpp
